--- a/styles/colors.css
+++ b/styles/colors.css
@@ -5,5 +5,5 @@
     --text-color-light: #1b1d20;
     --text-color-dark: #fff;
     --accent-color-light: #1b1d20;
-    --accent-color-dark; #fff;
+    --accent-color-dark: #fff;
 }
